--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^3.1.0",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.0.9",
+    "preact": "^10.19.4",
     "tailwindcss": "^3.4.0"
   }
 }
